# matter-relay4-nrf52840

./: CMakeLists.txt  Kconfig  pm_static_promicro_nrf52840_nrf52840.yml  prj.conf
.github/workflows/: build.yml
boards/: nrf52840dk_nrf52840.overlay  promicro_nrf52840_nrf52840.conf  promicro_nrf52840_nrf52840.overlay
src/: app_task.cpp  app_task.h  relay_manager.cpp  relay_manager.h  zcl_callbacks.cpp
